# gold_k

./: .env  .gitignore  .rules  Cargo.toml  README.md  xx
.github/workflows/: release.yml
gold_k/: Cargo.toml
gold_k/src/: config.rs  lib.rs  main.rs  models.rs  templates.rs  web.rs
gold_k/src/repository/: api_key.rs  mod.rs  monitor_config.rs  order.rs  signal.rs
gold_k/src/services/: dingtalk.rs  gate.rs  mod.rs  monitor.rs
gold_k/templates/: dashboard.html  keys.html  monitor.html
gold_k/templates/static/: common.js  dashboard.js  keys.js  monitor.js  styles.css
migrations/: 001_init.sql
scripts/: get_cookie.js  start.bat  start_gold.bat  test_place_order.sh
src/: main.rs  models.rs
src/services/: dingtalk.rs  gate.rs  monitor.rs
templates/: dashboard.html  keys.html  monitor.html
utils/: Cargo.toml
utils/src/: lib.rs  log.rs
