[package]
name = "gold_k"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "time",
    "uuid",
] }
askama = "0.14"
askama_axum = "0.4"
reqwest = { version = "0.12", features = ["json"] }
time = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenv = "0.15"
clap = { version = "4.5.40", features = ["derive"] }
utils = { version = "0.1.0", path = "../utils" }
validator = { version = "0.20.0", features = ["derive"] }
toml = "0.8.23"
serde_urlencoded = "0.7.1"
